# perry-cdom-api-community

./: .gitignore  .pre-commit-config.yaml  Oops.rej  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
scripts/: lint.sh
src/: cli.py
src/perry_cdom_api_community/: api.py  api_request.py  const.py  entity.py  http_request.py
tests/: test_api.py
